pull icon on mobile - position fixing

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -144,9 +144,7 @@ footer.bk-footer p {
 }
 
 .widget.extendednavigation a.pull {
-	top: -36px;
 	&:after {
-		top: 10px;
 		height: 3px;
 		background: @font-swatch6-color;
 		box-shadow: 0 8px 0 @font-swatch6-color, 0 16px 0 @font-swatch6-color;
